filtering almost complete

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -28,7 +28,7 @@
                                     <option value="Private">Private</option>
                                     <option value="Shared">Shared</option>
                                     <option value="Hostel">Hostel</option>
-                                    <option value="EntireHome">Entire Home</option>
+                                    <option value="Entire">Entire Home</option>
                                 </select>
                     </div>
                     
