--- a/templates/index.html
+++ b/templates/index.html
@@ -171,6 +171,7 @@
 <script src="{% static 'js/partical-animation.js' %}"></script>
 <script src="{% static 'js/wow.min.js' %}"></script>
 <script src="{% static 'js/smoothscroll.js' %}"></script>
+<script src="{% static 'js/jquery.qtip.min.js' %}"></script> 
 <script src="{% static 'js/script.js' %}"></script>
 
 </body>
