--- a/templates/detail.html
+++ b/templates/detail.html
@@ -117,14 +117,31 @@
                                                 <div class="twelve wide column">
                                                     <div class="ui two column grid amenitygrid" id="sy_reviews">
                                                         <!-- item and it's icon -->
+                                                        {% if room.wifi == True %}
                                                         <div class="column"><i class="large wifi icon"></i>Wireless Internet</div>
+                                                        {% endif %}
                                                         <!-- item ends -->
                                                         <!-- item -->
+                                                        {% if room.kitchen == True %}
                                                         <div class="column"><i class="large food icon"></i>Kitchen</div>
+                                                        {% endif %}
                                                         <!-- item ends -->
                                                         <!-- item -->
+                                                        {% if room.pets == True %}
                                                         <div class="column"><i class="large paw icon"></i>Pets allowed</div>
+                                                        {% endif %}
                                                         <!-- item ends -->
+                                                        <!-- item -->
+                                                        {% if room.furnitured == True %}
+                                                        <div class="column"><i class="large road icon"></i>Furnitured</div>
+                                                        {% endif %}
+                                                        <!-- item ends -->
+                                                        <!-- item -->
+                                                        {% if room.ac == True %}
+                                                        <div class="column"><i class="large selected radio icon"></i>A/C</div>
+                                                        {% endif %}
+                                                        <!-- item ends -->
+
 
                                                     </div>
                                                 </div>
@@ -314,9 +331,9 @@
                                                     </div>
                                                     <div class="seven wide column" style="text-align:left;">
                                                         <!-- monthly charge -->
-                                                        <div><span class="detailtext">₹ {{ room.price|add:-776 }}</span></div>
+                                                        <div><span class="detailtext">₹ {{ monthlyCharge}}</span></div>
                                                         <!-- service charge -->
-                                                        <div><span class="detailtext">₹ 776</span></div>
+                                                        <div><span class="detailtext">₹ {{ room.service }}</span></div>
                                                         <!-- total price -->
                                                         <div><span class="detailtext bold">₹ {{ room.price }}</span></div>
                                                     </div>
